       the default

     - Socket: The id_map_command string must be specified and should
       be the path to a listening unix domain socket. The resolver
       will connect to the socket and write the user name followed by
       a newline. It will expect the server to write the response in
       the same format as /usr/bin/id and then close the socket.

* 0.19.14 netidx

  - public tls function to precache key passwords in the keychain

  - trim cr and lf from passwords read from askpass

* 0.19.13 netidx

  - more config file path exposure

* 0.19.12 netidx

  - make some more functions public

* 0.19.11 netidx

  - make the tls module public

* 0.19.10 netidx

  - move a bunch of path related functions into file::Config from
    Config.

* 0.19.9 netidx

  - make the client config file types public

* 0.19.19 tools

  - fix bug that caused daemonized resolver server and activation
    server to fail.

* 0.19.5 protocols 0.19.8 netidx

  - add more context to channel errors

  - fix a race in connect_singleton

  - add publish_with_flags_and_writes to eliminate a race between
    publishing and registering a write channel.

* 0.19.14 archive

  - don't call get if the file exists

  - don't hold the lock while opening the archive file in LogfileCollection

* 0.19.13 archive

  - further minor optimizations

  - reimage should also take a filter

* 0.19.12 archive

  - cache open archive files for some time

  - only reindex a shard's directory when it is necessary

  - faster index reading and writing

* 0.19.11 archive

  - derive debug and clone on the recorder_client::Client struct.

* 0.19.10 archive

  - fix a bug in the oneshot rpc. It now returns results by shard with
    a pathmap to interpret the results by shard.

  - implement disjointness checking for globset. Use it to not start
    oneshot or publisher tasks that can never match the user's filter

* 0.19.9 archive

  - don't compress the index for an additional 2x and a reduction in